--- a/src/components/Todo-list/TodoItem.css
+++ b/src/components/Todo-list/TodoItem.css
@@ -1,12 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
+
+.Todo {
+    border: 1px solid #eeeeee;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .TodoItem {
     font-family: 'Noto Sans JP', sans-serif;
     font-size: 24px;
     font-weight: 300;
     color: #4d4d4d;
+    padding: 10px 5px;
+    border-bottom: 1px solid #eee;
+    display: flex;
+}
+.TodoItem > p {
+    margin: 0 0 0 15px;
 }
 
-.TodoItem-complete {
+.TodoItem:last-child {
+    border-bottom: none;
+}
+
+.TodoItem img {
+    margin-left: 10px;
+}
+
+.TodoItem-complete > p {
     text-decoration: line-through;
     opacity: .3;
 }
